    (Closes: #474487).
  * debian/README.Debian: Remove reference to README-buildd.chroot
    (Closes: #474030), thanks to Marc Fargas.  Update sbuild statistics
    information.
  * Add --apt-update option to sbuild to run "apt-get update" in the
    chroot prior to fetching sources and building (Closes: #472350).
    Thanks to Timothy G Abbott for this patch.

 -- Roger Leigh <rleigh@debian.org>  Sat, 05 Apr 2008 14:34:34 +0100

sbuild (0.57.1-1) unstable; urgency=low

  * New upstream release.
  * debian/control:
    - Depend upon schroot >= 1.1.6.  This version includes a
      SESSION_CLONE property, used to determine if a chroot is cloned,
      and hence package removal may be skipped.
    - Add wanna-build package.
  * debian/rules: set libexecdir to /usr/share, for compatibility with
    locations of scripts in earlier versions.
  * debian/schroot.install: use /usr/share in place of /usr/lib
    (Closes: #458779).
  * debian/wanna-build.install: New file: files for wanna-build.
  * sbuild: Don't parse output of dpkg-source (Closes: #471747).

 -- Roger Leigh <rleigh@debian.org>  Thu, 27 Mar 2008 20:42:56 +0000

sbuild (0.57.0-1) unstable; urgency=low

  * Sbuild/*.pm: Reindent to increase readability.
  * Sbuild/Chroot.pm: set APT::Install-Recommends to false inside the
    chroot (Closes: #449253).
  * Sbuild/Conf.pm: Add and export $check_depends_algorithm.
    [Jan-Marek Glogowski]
  * sbuild:
    - Reindent to increase readability.
    - Add additional syntax checks.  Thanks to Jan-Marek Glogowski.
    - build: Use unicode line drawing characters instead of ASCII.
    - filter_dependencies: Remove redundant conditional.
      [Jan-Marek Glogowski]
    - Add check for check-depends-algorithm option. [Jan-Marek Glogowski]
    - filter_dependencies: Change dependency behaviour depending upon
      check_depends_algorithm.  [Jan-Marek Glogowski]
    - Move to bin/.
  * avg-pkg-build-time:
    - Move to bin/.
  * bin/*: Reindent to increase readability.